Closed
Bug 1619544
Opened 6 years ago
Closed 6 years ago
Crash in [@ arena_dalloc | replace_free | mozilla::FFmpegVideoDecoder<T>::InitVAAPIDecoder]
Categories
(Core :: Audio/Video: Playback, defect, P5)
Tracking
()
RESOLVED
FIXED
mozilla75
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | --- | unaffected |
| firefox75 | --- | fixed |
People
(Reporter: calixte, Assigned: stransky)
References
(Blocks 2 open bugs, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-cb59f9f2-e0cf-470d-a7de-d0b6f0200303.
Top 10 frames of crashing thread:
0 firefox-bin arena_dalloc memory/build/mozjemalloc.cpp:3363
1 firefox-bin replace_free memory/replace/phc/PHC.cpp:1155
2 libxul.so mozilla::FFmpegVideoDecoder<58>::InitVAAPIDecoder dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:202
3 libxul.so mozilla::FFmpegVideoDecoder<58>::Init dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp:284
4 libxul.so mozilla::detail::ProxyFunctionRunnable<mozilla::MediaChangeMonitor::Init xpcom/threads/MozPromise.h:1456
5 libxul.so mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:207
6 libxul.so nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:299
7 libxul.so non-virtual thunk to nsThreadPool::Run xpcom/threads/nsThreadPool.cpp
8 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1220
9 libxul.so <name omitted> xpcom/threads/nsThreadUtils.cpp:481
There are 3 crashes (from 2 installations) in nightly 75 with buildid 20200302212732. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1616185.
[1] https://hg.mozilla.org/mozilla-central/rev?node=da012bb39f2b
Flags: needinfo?(stransky)
| Assignee | ||
Updated•6 years ago
|
Blocks: egl-linux-vaapi
Flags: needinfo?(stransky)
| Assignee | ||
Comment 1•6 years ago
|
||
We need to lock codec creation as ffmpeg/libva does not provide any kind of synchronization here.
Updated•6 years ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Priority: -- → P5
Pushed by ncsoregi@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a599c79ed651
[Wayland] Do locking in VA-API codec creation, r=jya
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Updated•6 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•