Bug 1619544 [Wayland] Do locking in VA-API codec creation, r=jya

We need to lock codec creation as ffmpeg/libva does not provide any kind of synchronization here.

Differential Revision: https://phabricator.services.mozilla.com/D65089