dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp
@@ -190,6 +190,8 @@ MediaResult FFmpegVideoDecoder<LIBAV_VER>::InitVAAPIDecoder() {
     return NS_ERROR_DOM_MEDIA_FATAL_ERR;
   }
 
+  StaticMutexAutoLock mon(sMonitor);
+
   if (!(mCodecContext = mLib->avcodec_alloc_context3(codec))) {
     FFMPEG_LOG("Couldn't init VA-API ffmpeg context");
     return NS_ERROR_OUT_OF_MEMORY;
